Add 'hyp2000' and 'pyml' as a micro-services (docker services)
