# public/api/0.0.2/openapi.yaml
@@ -1,25 +1,3 @@
-x-commons:
-  ratelimit-headers: &ratelimit-headers
-    X-RateLimit-Limit:
-      $ref: '#/components/headers/X-RateLimit-Limit'
-    X-RateLimit-Remaining:
-      $ref: '#/components/headers/X-RateLimit-Remaining'
-    X-RateLimit-Reset:
-      $ref: '#/components/headers/X-RateLimit-Reset'
-  common-responses: &common-responses
-    '400':
-      $ref: '#/components/responses/400BadRequest'      
-    '422':
-      $ref: '#/components/responses/422UnprocessableEntity'
-    '429':
-      $ref: '#/components/responses/429TooManyRequests'
-    '503':
-      $ref: '#/components/responses/503ServiceUnavailable'
-    '500':
-      $ref: '#/components/responses/500InternalServerError'
-    default:
-      $ref: '#/components/responses/default'
-
 openapi: 3.0.3
 info:
   termsOfService: http://terremoti.ingv.it/webservices_and_software
@@ -34,7 +12,7 @@ info:
     name: Creative Commons Attribution 4.0 International
     url: http://creativecommons.org/licenses/by/4.0/
   title: Apollo Web Services
-  version: 2.10.0
+  version: 2.5.0
   x-api-id: fa78e2be-826e-4451-8979-0a0dfd598dff
   x-logo: http://webservices.ingv.it/ingv_logo_text_two_lines.png
   x-summary: The hyp2000 web service bla bla bla
@@ -67,13 +45,29 @@ paths:
       description: Return the application status
       operationId: get_status
       responses:
-        <<: *common-responses
+        '400':
+          $ref: '#/components/responses/400BadRequest'      
+        '422':
+          $ref: '#/components/responses/422UnprocessableEntity'
+        '429':
+          $ref: '#/components/responses/429TooManyRequests'
+        '503':
+          $ref: '#/components/responses/503ServiceUnavailable'
+        '500':
+          $ref: '#/components/responses/500InternalServerError'
+        default:
+          $ref: '#/components/responses/default'
         '200':
           description: Operation successful
           headers:
-            <<: *ratelimit-headers
             Cache-Control:
               $ref: '#/components/headers/Cache-Control'
+            X-RateLimit-Limit:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Limit'
+            X-RateLimit-Remaining:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Remaining'
+            X-RateLimit-Reset:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Reset'
           content:
             application/problem+json:
               schema:
@@ -98,7 +92,18 @@ paths:
         - $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/parameters/cha__REQUIRED'
         - $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/parameters/loc'
       responses:
-        <<: *common-responses
+        '400':
+          $ref: '#/components/responses/400BadRequest'      
+        '422':
+          $ref: '#/components/responses/422UnprocessableEntity'
+        '429':
+          $ref: '#/components/responses/429TooManyRequests'
+        '503':
+          $ref: '#/components/responses/503ServiceUnavailable'
+        '500':
+          $ref: '#/components/responses/500InternalServerError'
+        default:
+          $ref: '#/components/responses/default'
         '200':
           description: successful operation
       tags:
@@ -141,11 +146,27 @@ paths:
                         $ref: '#/components/schemas/ObjectHyp2000Phase'
 
       responses:
-        <<: *common-responses
+        '400':
+          $ref: '#/components/responses/400BadRequest'      
+        '422':
+          $ref: '#/components/responses/422UnprocessableEntity'
+        '429':
+          $ref: '#/components/responses/429TooManyRequests'
+        '503':
+          $ref: '#/components/responses/503ServiceUnavailable'
+        '500':
+          $ref: '#/components/responses/500InternalServerError'
+        default:
+          $ref: '#/components/responses/default'
         '200':
           description: successful operation
           headers:
-            <<: *ratelimit-headers
+            X-RateLimit-Limit:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Limit'
+            X-RateLimit-Remaining:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Remaining'
+            X-RateLimit-Reset:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Reset'
           content:
             application/json:
               schema:
@@ -179,11 +200,27 @@ paths:
                         $ref: '#/components/schemas/ObjectPyMLAmplitude'
 
       responses:
-        <<: *common-responses
+        '400':
+          $ref: '#/components/responses/400BadRequest'      
+        '422':
+          $ref: '#/components/responses/422UnprocessableEntity'
+        '429':
+          $ref: '#/components/responses/429TooManyRequests'
+        '503':
+          $ref: '#/components/responses/503ServiceUnavailable'
+        '500':
+          $ref: '#/components/responses/500InternalServerError'
+        default:
+          $ref: '#/components/responses/default'
         '200':
           description: Operation successful
           headers:
-            <<: *ratelimit-headers
+            X-RateLimit-Limit:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Limit'
+            X-RateLimit-Remaining:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Remaining'
+            X-RateLimit-Reset:
+              $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Reset'
             Cache-Control:
               $ref: '#/components/headers/Cache-Control'
           content:
@@ -283,14 +320,12 @@ components:
     Cache-Control:
       schema:
         type: string
-    Retry-After:
-      $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/headers/Retry-After'
     X-RateLimit-Limit:
-      $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/headers/X-RateLimit-Limit'
+      $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Limit'
     X-RateLimit-Reset:
-      $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/headers/X-RateLimit-Reset'
+      $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Reset'
     X-RateLimit-Remaining:
-      $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/headers/X-RateLimit-Remaining'
+      $ref: 'https://teamdigitale.github.io/openapi/v0.1.0/definitions.yaml#/components/headers/X-RateLimit-Remaining'
   responses:
     204NoContent:
       $ref: 'https://ingv.github.io/openapi/definitions.yaml#/components/responses/204NoContent'
@@ -343,6 +378,20 @@ components:
               example: 15.0
         station_magnitude:
           properties:
+            station_magnitude:
+              type: string
+              example: meanamp
+              default: meanamp
+              enum: 
+                - meanamp
+                - meanmag
+            amp_mean_type:
+              type: string
+              example: geo
+              default: geo
+              enum: 
+                - geo
+                - ari
             delta_peaks:
               type: number
               format: float
